# xArm7_Grasping_Pipeline

./: README.md
AI_Planner/GraspingPlanner/: DEMO_BASH_DETERMINISTIC.sh  DEMO_BASH_DETERMINISTIC_AUTO.sh  DEMO_BASH_LLM.sh  config.py  main.py  main_deterministic.py  requirements.yml  test_ollama.py
AI_Planner/GraspingPlanner/PC_2_MESH/: pc_2_mesh.py
AI_Planner/GraspingPlanner/PC_2_MESH/output_data/: bowl_orange.stl
AI_Planner/GraspingPlanner/modules_e/: camera.py  camera_ros.py  detection.py  deterministc_planner.py  graspnet.py  planner.py  planner_normal.py  segmentation.py  vertical.py  visualization.py
AI_Planner/GraspingPlanner/prompts/: prompt_detailed.txt  prompt_detailed_with_reasoning.txt  prompt_short.txt  save_long_prompt.txt
ros2_ws/src/ai_planner_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/ai_planner_ros/ai_planner_ros/: calibrate_tray.py  markers_pub.py  moveit_pub.py  scene_rviz_pub.py  scene_spawner.py  scene_spawner_mov.py  selected_grasp_pub.py  tray_robot.py
ros2_ws/src/ai_planner_ros/launch/: calibrate_tray.launch.py  visualization.launch.py
ros2_ws/src/ai_robot_control/: CMakeLists.txt  package.xml
ros2_ws/src/ai_robot_control/config/: OLD_CONFIG.json  config_grasps.json
ros2_ws/src/ai_robot_control/include/: mgi.h  pilz.hpp
ros2_ws/src/ai_robot_control/launch/: Moveit_Run.launch.py
ros2_ws/src/ai_robot_control/src/: moveit_run_node.cpp  mtc.cpp
ros2_ws/src/xarm_ros2/xarm_moveit_config/: package.xml
ros2_ws/src/xarm_ros2/xarm_moveit_config/launch/: _robot_moveit_common2.launch.py
(+2 files in other folders)
